--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -56,5 +56,5 @@
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
 <% }else{ %>
-  <h1>Check Your Email</h1>
+  <h1>SignUp successfully. To Active Your Account Check Your Email</h1>
 <% }%>
