--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,33 +1,51 @@
-<div class="container mt-4">
-  <form action="/login" method="POST">
-    <div class="form-group">
-      <label for="exampleInputEmail1">Email address or user name</label>
-      <input
-        type="text"
-        class="form-control"
-        id="exampleInputEmail1"
-        aria-describedby="emailHelp"
-        placeholder="Enter email"
-        name="emailOrUsername"
-      />
-      <small id="emailHelp" class="form-text text-muted"
-        >We'll never share your email with anyone else.</small
-      >
+<div class="loginPage">
+  <div class="container mt-4">
+    <div class="authForm">
+      <div class="formContainer">
+        <form action="/login" method="POST">
+          <h4>Login into Your Account</h4>
+          <br />
+          <div class="form-group input-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text"
+                ><i class="fa fa-user-o" aria-hidden="true"></i
+              ></span>
+            </div>
+            <input
+              type="text"
+              class="form-control"
+              id="exampleInputEmail1"
+              aria-describedby="emailHelp"
+              placeholder=" Enter email or username"
+              name="emailOrUsername"
+              required
+            />
+          </div>
+          <div class="form-group input-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text"
+                ><i class="fa fa-key" aria-hidden="true"></i
+              ></span>
+            </div>
+            <input
+              type="password"
+              class="form-control"
+              id="exampleInputPassword1"
+              placeholder="Password"
+              name="password"
+              required
+            />
+          </div>
+          <div class="form-group input-group">
+            <a href="/reset_password">Forgot password?</a>
+          </div>
+
+          <button type="submit" class="btn btn-primary btn-block">Login</button>
+        </form>
+        <br />
+
+        <%- include('oauth',{method:"Login"}) %>
+      </div>
     </div>
-    <div class="form-group">
-      <label for="exampleInputPassword1">Password</label>
-      <input
-        type="password"
-        class="form-control"
-        id="exampleInputPassword1"
-        placeholder="Password"
-        name="password"
-      />
-    </div>
-    <div class="form-group form-check">
-      <input type="checkbox" class="form-check-input" id="exampleCheck1" />
-      <label class="form-check-label" for="exampleCheck1">Check me out</label>
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-  </form>
+  </div>
 </div>
