--- a/views/auth/reset-password.ejs
+++ b/views/auth/reset-password.ejs
@@ -1,15 +1,32 @@
-<h1 class="p-3">To reset your password enter your username or email.</h1>
-<form method="POST" action="/reset_password">
-  <div class="form-group">
-    <label for="exampleInputEmail1">Email address</label>
-    <input
-      type="text"
-      class="form-control"
-      id="exampleInputEmail1"
-      aria-describedby="emailHelp"
-      placeholder="Enter email or username"
-      name="usernameOrEmail"
-    />
+<div class="rest-password">
+  <div class="container mt-4">
+    <div class="authForm">
+      <div class="formContainer">
+        <form method="POST" action="/reset_password">
+          <h5 class="p-3">
+            To reset your password enter your username or email.
+          </h5>
+          <label for="exampleInputEmail1">Email address or username</label>
+          <div class="form-group input-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text"
+                ><i class="fa fa-user-o" aria-hidden="true"></i
+              ></span>
+            </div>
+            <input
+              type="text"
+              class="form-control"
+              id="exampleInputEmail1"
+              aria-describedby="emailHelp"
+              placeholder="Enter email or username"
+              name="usernameOrEmail"
+            />
+          </div>
+          <button type="submit" class="btn btn-primary btn-block">
+            Reset Password
+          </button>
+        </form>
+      </div>
+    </div>
   </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+</div>
