--- a/views/auth/changeForgetPassword.ejs
+++ b/views/auth/changeForgetPassword.ejs
@@ -1,24 +1,52 @@
-<div class="container mt-4">
-  <form action="/change_reset_password" method="POST">
-    <input
-      type="hidden"
-      name="passwordResetToken"
-      value="<%= passwordResetToken %>"
-    />
-    <div class="form-group">
-      <label for="exampleInputPassword1">Password</label>
-      <input
-        type="password"
-        class="form-control"
-        id="exampleInputPassword1"
-        placeholder="Password"
-        name="password"
-      />
+<div class="wrapper changeForgotPassword">
+  <%- include('../error/flashMessages') %>
+  <div class="container mt-4">
+    <div class="authForm">
+      <div class="formContainer">
+        <form action="/change_reset_password" method="POST">
+          <h5 class="p-3">
+            Change Your Password
+          </h5>
+          <input
+            type="hidden"
+            name="passwordResetToken"
+            value="<%= passwordResetToken %>"
+          />
+          <div class="form-group input-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text"
+                ><i class="fa fa-key" aria-hidden="true"></i
+              ></span>
+            </div>
+            <input
+              type="password"
+              class="form-control"
+              id="password"
+              placeholder="New Password"
+              name="password"
+              required
+            />
+          </div>
+          <div class="form-group input-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text"
+                ><i class="fa fa-key" aria-hidden="true"></i
+              ></span>
+            </div>
+            <input
+              type="password"
+              class="form-control"
+              id="confirm-password"
+              placeholder="Confirm New Password"
+              required
+            />
+          </div>
+
+          <button type="submit" class="btn btn-warning btn-block">
+            Change Password
+          </button>
+        </form>
+      </div>
     </div>
-    <div class="form-group form-check">
-      <input type="checkbox" class="form-check-input" id="exampleCheck1" />
-      <label class="form-check-label" for="exampleCheck1">Check me out</label>
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-  </form>
+  </div>
 </div>
