--- a/views/auth/reset-password.ejs
+++ b/views/auth/reset-password.ejs
@@ -1,4 +1,5 @@
-<div class="rest-password">
+<div class="wrapper rest-password">
+  <%- include('../error/flashMessages') %>
   <div class="container mt-4">
     <div class="authForm">
       <div class="formContainer">
