--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,4 +1,5 @@
-<div class="signupPage">
+<div class="wrapper signupPage">
+    <%- include('../error/flashMessages') %>
   <div class="container mt-4">
     <div class="authForm">
       <div class="formContainer">
