--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,4 +1,5 @@
-<div class="loginPage">
+<div class="wrapper loginPage">
+  <%- include('../error/flashMessages') %>
   <div class="container mt-4">
     <div class="authForm">
       <div class="formContainer">
@@ -40,7 +41,9 @@
             <a href="/reset_password">Forgot password?</a>
           </div>
 
-          <button type="submit" class="btn btn-primary btn-block">Login</button>
+          <button type="submit" class="btn btn-primary btn-block">
+            Login
+          </button>
         </form>
         <br />
 
