--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -14,33 +14,16 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <link
+      href="https://fonts.googleapis.com/css?family=Bebas+Neue|Montserrat:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Open+Sans:400,400i,600,600i,700,700i,800,800i|Oswald:400,700|Roboto:400,400i,500,500i,700,700i,900,900i|Yeon+Sung&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/css/style.css" />
     <title><%-title %></title>
   </head>
   <body>
     <!-- nav bar -->
     <%-include('./navbar/navbar') %>
-
-    <!-- show error -->
-    <div class="container mt-4">
-      <div class="row" style="justify-content: center;">
-        <div class="col-lg-6">
-          <% error.forEach(err => { %> <%-
-          include('./error/validationErrors',{error:err})%> <% }) %>
-        </div>
-      </div>
-    </div>
-
-    <!-- success message -->
-    <div class="container mt-4">
-      <div class="row" style="justify-content: center;">
-        <div class="col-lg-6">
-          <% success.forEach(singleSuccess => { %> <%-
-          include('./success_msg/successMessage',{success:singleSuccess})%> <%
-          }) %>
-        </div>
-      </div>
-    </div>
 
     <!-- body part -->
     <%- body %>
