--- a/views/navbar/navbar.ejs
+++ b/views/navbar/navbar.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
+<nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm fixed-top">
   <div class="container">
     <a class="navbar-brand" href="/">Adda Golpo</a>
     <button
