--- a/views/navbar/authNavbar.ejs
+++ b/views/navbar/authNavbar.ejs
@@ -1,17 +1,24 @@
-<div class="ml-auto authNavbar">
-  <ul class="navbar-nav mr-auto">
+<div class="authNavbar">
+  <div class="search-bar">
+    <div class="input-group">
+      <input
+        type="text"
+        class="form-control"
+        placeholder="Username"
+        aria-label="Username"
+        aria-describedby="basic-addon1"
+      />
+      <div class="input-group-append">
+        <button class="btn btn-primary">Search</button>
+      </div>
+    </div>
+  </div>
+  <ul class="navbar-nav">
     <li class="nav-item">
       <a class="nav-link" href="/">
         <i class="fa fa-home" aria-hidden="true"></i>
         <br />
         <span class="p-0 m-0">Home</span>
-      </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="/messages">
-        <i class="fa fa-comments" aria-hidden="true"></i>
-        <br />
-        <span class="p-0 m-0">Messaging</span>
       </a>
     </li>
     <li class="nav-item">
@@ -41,8 +48,8 @@
         <span class="p-0 m-0"><%= user.name %></span>
       </a>
       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <a class="dropdown-item" href="#">Action</a>
-        <a class="dropdown-item" href="#">Another action</a>
+        <a class="dropdown-item" href="/user/<%= user.username %>">Profile</a>
+        <a class="dropdown-item" href="/settings">Settings</a>
         <div class="dropdown-divider"></div>
         <form action="/logout" method="post">
           <input type="submit" class="dropdown-item" value="Log Out" />
