added friend request system

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,28 +1,29 @@
-body {
-    font-family: 'Open Sans', sans-serif;
+@import './scssVariable.scss';
 
-    .wrapper {
-        min-height    : 100vh;
-        padding-top   : 10px;
-        padding-bottom: 10px;
-        padding-top   : 56px;
-        background    : linear-gradient(90deg, #d3fff1, #efc7ff);
-    }
+body {
+  font-family: 'Open Sans', sans-serif;
+
+  .wrapper {
+    min-height: 100vh;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-top: 56px;
+    background: $linear-background;
+  }
 }
 
 .authForm {
-    display        : flex;
-    justify-content: center;
-    align-items    : center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-    .formContainer {
-        // min-width : 450px;
-        min-width    : 550px;
-        min-height   : 368px;
-        background   : white;
-        padding      : 60px 70px;
-        border-radius: 15px;
-        box-shadow   : 1px 4px 10px 0px #9e9a9adb;
-
-    }
+  .formContainer {
+    // min-width : 450px;
+    min-width: 550px;
+    min-height: 368px;
+    background: white;
+    padding: 60px 70px;
+    border-radius: 15px;
+    box-shadow: 1px 4px 10px 0px #9e9a9adb;
+  }
 }
