--- a/views/success_msg/forgotPasswordSuccess.ejs
+++ b/views/success_msg/forgotPasswordSuccess.ejs
@@ -1,1 +1,3 @@
-<h1>To reset your password check your email.</h1>
+<div class="messagePage">
+  <h1>To reset your password check your email.</h1>
+</div>
