--- a/views/success_msg/signupSuccess.ejs
+++ b/views/success_msg/signupSuccess.ejs
@@ -1,1 +1,4 @@
-<h1>SignUp successfully. To Active Your Account Check Your Email</h1>
+<div class="messagePage">
+  <h1>SignUp successfully.</h1>
+  <h5>To Active Your Account Check Your Email</h5>
+</div>
