--- a/src/scss/homePage.scss
+++ b/src/scss/homePage.scss
@@ -1,25 +1,52 @@
-.homePage {
-    width                : 100%;
-    height               : 100vh;
-    background           : url(/photos/background.png);
-    background-attachment: fixed;
-    background-repeat    : no-repeat;
-    background-size      : cover;
+.unAuthHomePage {
+  width: 100%;
+  height: 100vh;
+  background: url(/photos/background.png);
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
 
-    .backgroundColor {
-        width     : 100%;
-        height    : 100%;
-        background: linear-gradient(90deg, #86e6c8c2, #e91e6380);
+  .backgroundColor {
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(90deg, #86e6c8c2, #e91e6380);
 
-        .content {
-            display        : flex;
-            flex-direction : column;
-            height         : 100%;
-            justify-content: center;
-            align-items    : center;
-            color          : white;
-            text-shadow    : 0px 0px 8px black;
-            font-family    : 'Montserrat', sans-serif;
-        }
+    .content {
+      display: flex;
+      flex-direction: column;
+      height: 100%;
+      justify-content: center;
+      align-items: center;
+      color: white;
+      text-shadow: 0px 0px 8px black;
+      font-family: 'Montserrat', sans-serif;
     }
+  }
+}
+
+.authHomePage {
+  padding-top: 70px;
+
+  .friendListOption {
+    height: calc(100vh - 70px);
+    padding: 20px;
+
+    nav {
+      a {
+        color: #495057 !important;
+      }
+      a.active {
+        color: #007bff !important;
+      }
+    }
+
+    #nav-tabContent {
+      overflow: scroll;
+      height: 90%;
+    }
+  }
+  .chatOption {
+    height: calc(100vh - 70px);
+    background: green;
+  }
 }
