--- a/views/homepage/authHomePage.ejs
+++ b/views/homepage/authHomePage.ejs
@@ -1,1 +1,67 @@
-<h1>Auth Home Page</h1>
+<div class="authHomePage">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-4 friendListOption">
+        <nav>
+          <div class="nav nav-tabs" id="nav-tab" role="tablist">
+            <a
+              class="nav-item nav-link active"
+              id="nav-friends-tab"
+              data-toggle="tab"
+              href="#nav-friends"
+              role="tab"
+              aria-controls="nav-friends"
+              aria-selected="true"
+            >
+              <i class="fa fa-users" aria-hidden="true"></i> Friends</a
+            >
+            <a
+              class="nav-item nav-link"
+              id="nav-chatList-tab"
+              data-toggle="tab"
+              href="#nav-chatList"
+              role="tab"
+              aria-controls="nav-chatList"
+              aria-selected="false"
+            >
+              <i class="fa fa-comments" aria-hidden="true"></i> Chat List</a
+            >
+          </div>
+        </nav>
+        <div class="tab-content" id="nav-tabContent">
+          <div
+            class="tab-pane fade show active"
+            id="nav-friends"
+            role="tabpanel"
+            aria-labelledby="nav-friends-tab"
+          >
+            <h1>HII</h1>
+            <h1>HII</h1>
+            <h1>HII</h1>
+          </div>
+          <div
+            class="tab-pane fade"
+            id="nav-chatList"
+            role="tabpanel"
+            aria-labelledby="nav-chatList-tab"
+          >
+            <h1>NOO</h1>
+            <h1>NOO</h1>
+            <h1>NOO</h1>
+            <h1>NOO</h1>
+            <h1>NOO</h1>
+            <h1>NOO</h1>
+            <h1>NOO</h1>
+            <h1>NOO</h1>
+            <h1>NOO</h1>
+            <h1>NOO</h1>
+            <h1>NOO</h1>
+            <h1>NOO</h1>
+            <h1>NOO</h1>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-8 chatOption"></div>
+    </div>
+  </div>
+</div>
