--- a/views/homepage/unAuthHomePage.ejs
+++ b/views/homepage/unAuthHomePage.ejs
@@ -1,4 +1,4 @@
-<div class="homePage">
+<div class="unAuthHomePage">
   <div class="backgroundColor">
     <div class="content">
       <h1 class="display-4">Welcome To Adda Golpo</h1>
