intregate react to projct

--- a/src/scss/homePage.scss
+++ b/src/scss/homePage.scss
@@ -47,6 +47,6 @@
   }
   .chatOption {
     height: calc(100vh - 70px);
-    background: green;
+    background: linear-gradient(90deg, #d3fff1, #efc7ff);
   }
 }
