--- a/views/homepage/authHomePage.ejs
+++ b/views/homepage/authHomePage.ejs
@@ -30,7 +30,7 @@
         </nav>
         <div class="tab-content" id="nav-tabContent">
           <div
-            class="tab-pane fade show active"
+            class="friendList-content tab-pane fade show active"
             id="nav-friends"
             role="tabpanel"
             aria-labelledby="nav-friends-tab"
@@ -40,7 +40,7 @@
             <h1>HII</h1>
           </div>
           <div
-            class="tab-pane fade"
+            class="chatList-content tab-pane fade"
             id="nav-chatList"
             role="tabpanel"
             aria-labelledby="nav-chatList-tab"
