--- a/views/navbar/authNavbar.ejs
+++ b/views/navbar/authNavbar.ejs
@@ -8,6 +8,7 @@
           placeholder="Search your friend"
           name="user"
           value="<%= typeof(searchName) !== 'undefined' ? searchName : '' %>"
+          required
         />
         <div class="input-group-append">
           <button type="submit" class="btn btn-primary">Search</button>
