--- a/views/searchUser/searchUser.ejs
+++ b/views/searchUser/searchUser.ejs
@@ -6,7 +6,7 @@
           <img src="<%= searchUser.photoLink %>" alt="<%= searchUser.name %>" />
           <div class="information">
             <a href="/user/<%= searchUser.username%>"><%= searchUser.name %></a>
-            <h5><%= searchUser.email %></h5>
+            <h5><%= searchUser.username %></h5>
             <hr />
             <% if (alreadyFriend){%>
             <button class="btn btn-primary btn-block" disabled>
