friend list rest api and frontend show done

--- a/views/homepage/authHomePage.ejs
+++ b/views/homepage/authHomePage.ejs
@@ -34,11 +34,7 @@
             id="nav-friends"
             role="tabpanel"
             aria-labelledby="nav-friends-tab"
-          >
-            <h1>HII</h1>
-            <h1>HII</h1>
-            <h1>HII</h1>
-          </div>
+          ></div>
           <div
             class="chatList-content tab-pane fade"
             id="nav-chatList"
