--- a/views/homepage/authHomePage.ejs
+++ b/views/homepage/authHomePage.ejs
@@ -57,7 +57,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-8 chatOption"></div>
+      <div class="col-md-8 chatOption-container"></div>
     </div>
   </div>
 </div>
