socket.io problem solve

--- a/views/homepage/authHomePage.ejs
+++ b/views/homepage/authHomePage.ejs
@@ -28,7 +28,11 @@
             >
           </div>
         </nav>
-        <div class="tab-content" id="nav-tabContent">
+        <div
+          style="border-left:1px solid rgba(0,0,0,.1)"
+          class="tab-content"
+          id="nav-tabContent"
+        >
           <div
             class="friendList-content tab-pane fade show active"
             id="nav-friends"
