--- a/views/navbar/navbar.ejs
+++ b/views/navbar/navbar.ejs
@@ -1,6 +1,10 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm fixed-top">
+<nav
+  class="main-mav-bar navbar navbar-expand-lg navbar-light bg-light shadow-sm fixed-top "
+>
   <div class="container">
-    <a class="navbar-brand" href="/">Adda Golpo</a>
+    <a class="navbar-brand" href="/"
+      ><img class="logo" src="/photos/logo.png" alt="Adda Golpo"
+    /></a>
 
     <button
       class="navbar-toggler"
