added design to unAuth home page

--- a/views/homepage/unAuthHomePage.ejs
+++ b/views/homepage/unAuthHomePage.ejs
@@ -6,13 +6,96 @@
     </div>
   </div>
 </div>
-<h1>HEllo World</h1>
-<h1>HEllo World</h1>
-<h1>HEllo World</h1>
-<h1>HEllo World</h1>
-<h1>HEllo World</h1>
-<h1>HEllo World</h1>
-<h1>HEllo World</h1>
-<h1>HEllo World</h1>
-<h1>HEllo World</h1>
-<h1>HEllo World</h1>
+<section class="what-is-adda-golpo jumbotron">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-5 offset-md-1 what-is-adda-golpo-img-center">
+        <div class="what-is-adda-golpo-logo">
+          <img src="/photos/logo.png" alt="Adda Golpo Logo" />
+        </div>
+      </div>
+      <div class="col-md-5">
+        <div class="what-is-adda-golpo-text">
+          <h2>What is Adda Golpo and why?</h2>
+          <p>
+            Adda Golpo free and open source chat application created by
+            <a href="https://www.facebook.com/hridoy.vfx">Shahriar Hridoy</a>.
+            <br />
+            It uses latest technology to build this application. With Adda Golpo
+            you can chat with your friend real time for free.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<footer>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <div class="display-4 text-center">
+          Adda <br />
+          Golpo
+        </div>
+        <p class="footer-image-text text-center">
+          Chat with your friend for free
+        </p>
+      </div>
+
+      <div class="col-md-4">
+        <h5>Adda Golpo</h5>
+        <hr />
+        <p><a href="#">About</a></p>
+        <hr />
+        <p><a href="#">Contact</a></p>
+        <hr />
+        <p><a href="#">Our Mission</a></p>
+        <hr />
+        <p><a href="#">Team</a></p>
+        <hr />
+        <p><a href="#">Feed back</a></p>
+        <hr />
+        <p><a href="#">Terms and Policies</a></p>
+        <hr />
+      </div>
+      <div
+        class="col-md-4 d-flex flex-column align-items-center keep-connected"
+      >
+        <h5 class="keep-connected-header">Keep Connected</h5>
+        <hr />
+        <div class="keep-connected-links">
+          <ul>
+            <li class="shadow">
+              <a href="https://www.facebook.com/hridoy.vfx"
+                ><i class="fa fa-facebook" aria-hidden="true"></i
+              ></a>
+            </li>
+            <li class="ml-3 shadow">
+              <a href="https://www.instagram.com/shahriar7879"
+                ><i class="fa fa-instagram" aria-hidden="true"></i>
+              </a>
+            </li>
+            <li class="ml-3 shadow">
+              <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+            </li>
+            <li class="ml-3 shadow">
+              <a href="#"
+                ><i class="fa fa-youtube-play" aria-hidden="true"></i
+              ></a>
+            </li>
+          </ul>
+        </div>
+        <div class="get-app">
+          <a href="#"
+            ><img
+              src="https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png"
+              alt="Get Adda Golpo on PlayStore"
+          /></a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="copyright">
+    <p>Copyright &copy; 2020 Adda Golpo. All rights reserved</p>
+  </div>
+</footer>
