--- a/src/scss/homePage.scss
+++ b/src/scss/homePage.scss
@@ -9,7 +9,7 @@
   .backgroundColor {
     width: 100%;
     height: 100%;
-    background: linear-gradient(90deg, #86e6c8c2, #e91e6380);
+    background: linear-gradient(90deg, #1258a5, #e91e6380);
 
     .content {
       display: flex;
@@ -50,4 +50,34 @@
     padding: 0;
     height: calc(100vh - 70px);
   }
+}
+
+.what-is-adda-golpo {
+  font-family: 'Kalpurush', sans-serif;
+}
+
+.what-is-adda-golpo.jumbotron {
+  margin-bottom: 0;
+}
+.what-is-adda-golpo .what-is-adda-golpo-img-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.what-is-adda-golpo .row .what-is-adda-golpo-logo img {
+  width: 80%;
+}
+
+.what-is-adda-golpo .what-is-adda-golpo-text {
+  margin-top: 25px;
+  color: #595959;
+}
+.what-is-adda-golpo .row .what-is-adda-golpo-text h2 {
+  font-size: 25px;
+  font-weight: bold;
+}
+
+.what-is-adda-golpo .row .what-is-adda-golpo-text p {
+  font-size: 21px;
 }
