--- a/views/error/noUserFound.ejs
+++ b/views/error/noUserFound.ejs
@@ -1,3 +1,4 @@
 <div class="messagePage">
-  <h1>No User found with this email or username.</h1>
+  <h2>No User found with this email or username.</h2>
+  <p>Search user by their username or email</p>
 </div>
