--- a/src/scss/userProfile.scss
+++ b/src/scss/userProfile.scss
@@ -1,7 +1,65 @@
 .userProfile {
-  padding-top: 70px;
+  padding-top: 70px !important;
+  text-align: center;
+  font-family: 'Montserrat', sans-serif;
+  color: #3b3f44;
 
-  h1 {
-    color: red;
+  .sameUser img {
+    cursor: pointer;
+  }
+  .searchUserProfilePicture {
+    margin-bottom: 10px;
+    img {
+      width: 200px;
+      height: 200px;
+      border-radius: 50%;
+      border: 3px solid #82baffbf;
+      box-shadow: 1px 2px 11px #8a8a8a;
+    }
+  }
+
+  .sameUser {
+    position: relative;
+    .uploadPhotoLabel {
+      position: absolute;
+      top: 0;
+      width: 200px;
+      height: 200px;
+      border-radius: 50%;
+      background: #77777785;
+      color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      pointer-events: none;
+
+      i {
+        color: #cccccc;
+        margin-right: 5px;
+      }
+
+      span {
+        font-weight: bold;
+      }
+    }
+  }
+
+  .userInfo {
+    text-align: left;
+    .user-info-content {
+      h6 {
+        margin-left: 5px;
+      }
+    }
+  }
+  .edit-profile-buttons,
+  .upload-profile-picture-buttons {
+    justify-content: center;
+    .cancelButton {
+      margin-right: 10px;
+    }
+  }
+  .upload-profile-picture-buttons {
+    margin-bottom: 20px;
   }
 }
